<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_page_title">About</string>
    <string name="ad_tag_text">Sponsored</string>
    <string name="app_added">App(s) added</string>
    <string name="app_name">全能清理大师</string>
    <string name="battery_full_time_start_text">Fully charge left</string>
    <string name="battery_is_full">Fully charged Unplug the charger</string>
    <string name="battery_title">Battery</string>
    <string name="cancel">Cancel</string>
    <string name="charging_screen_slide_to_enter">＞＞ Slide to unlock</string>
    <string name="clean_more_title">Clean More</string>
    <string name="disable">Disable</string>
    <string name="feedback_title">User Feedback</string>
    <string name="ignore_add_tips">Select app(s) to add</string>
    <string name="ignore_add_title">Add To Ignore List</string>
    <string name="ignore_click_tips">Tap + icon to add apps</string>
    <string name="ignore_list_tips">App(s) in ignore list will not be closed</string>
    <string name="ignore_list_title">Ignore List</string>
    <string name="ignore_remove">Remove</string>
    <string name="installed_summary">[Installed]</string>
    <string name="junk_cache_title">Cache Junk</string>
    <string name="junk_clean_complete">No Junk Detected</string>
    <string name="junk_cleaned">Junk Files Cleaned</string>
    <string name="junk_files_text">Junk Files</string>
    <string name="lock_screen_setting_content">"Display the current charging status, and sponsors' content"</string>
    <string name="locker_tap_boost">Boost</string>
    <string name="memory_boost_text">Memory Boost</string>
    <string name="menu_feedback_email">Please enter your email address</string>
    <string name="menu_feedback_info">Your feedback helps us make improvements</string>
    <string name="menu_feedback_submit">Submit</string>
    <string name="menu_feedback_submit_dialog">Sending...</string>
    <string name="menu_feedback_submit_fail">Feedback not sent, please check your internet connection.</string>
    <string name="menu_feedback_submit_success">Thanks for your feedback!</string>
    <string name="obsolete_apk_title">Obsolete APK</string>
    <string name="pref_ignore_title">Add apps to ignore list</string>
    <string name="ram_percent">RAM</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_five_stars">We are working hard for a better user experience.We’d greatly appreciate if you can rate us.</string>
    <string name="result_boost_best">Reached the best optimization</string>
    <string name="result_boost_mem">RAM released:%s</string>
    <string name="result_cleaned_mem">Cleaned:%s</string>
    <string name="selected_text">Selected :</string>
    <string name="settings_text">Settings</string>
    <string name="smart_locker_title">Smart Charge</string>
    <string name="storage_percent">STORAGE</string>
    <string name="total_text">Total</string>
    <string name="un_installed_summary">[Not Installed]</string>
    <string name="used_text">Used</string>
    <string name="versions">versions:</string>
    <string name="exit_toast">Press again to exit</string>
    <string name="memory_junk_group_title">Memory Junk</string>
    <string name="loading">Loading …</string>
    <string name="junk_notification_title">Memory is full</string>
    <string name="notification_action">Click to clean</string>
    <string name="notification_settings_title">RAM reminder</string>
    <string name="one_tap_boost_shortcut_toast">1-Tap Boost shortcut added. Do not add repeatedly.</string>
    <string name="settings_shortcut_title">Create shortcut on desktop</string>
    <string name="tap_boost_shortcut">1-Tap Boost</string>
    <string name="running_apps">Running apps</string>
    <string name="running_apps_selected">%s App(s) Selected</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="ad_boost_from_smart_locker">ca-app-pub-9182314712314010/5200473681</string>
    <string name="ad_boost_result">ca-app-pub-1263217468118448/3688242770</string>
    <string name="ad_boost_result_in">ca-app-pub-1263217468118448/5012505105</string>
    <string name="ad_junk_result">ca-app-pub-1263217468118448/6534786019</string>
    <string name="ad_junk_result_in">ca-app-pub-1263217468118448/219477077</string>
    <string name="ad_shortcut_result">ca-app-pub-9182314712314010/9491072482</string>
    <string name="ad_smart_locker">ca-app-pub-1263217468118448/2617885410</string>
    <string name="admob_app_id">ca-app-pub-1263217468118448~8107950073</string>
    <string name="admob_locker_id">ca-app-pub-1263217468118448/4775209722</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="disable_hint">After disabled,1-Tap boost and other features will be deactivated.Are you sure proceed?</string>
</resources>