<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:id="@id/dialog_abc_locker_fl" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/white_bg" android:layout_width="300.0dip" android:layout_height="wrap_content">
        <TextView android:textColor="@color/text_color" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/disable_hint" android:layout_weight="1.0" />
        <ImageView android:background="@color/text_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textColor="@color/text_color_sub" android:gravity="center" android:id="@id/disable_tv" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/disable" android:layout_weight="1.0" />
            <ImageView android:background="@color/text_color" android:layout_width="0.5dip" android:layout_height="fill_parent" />
            <TextView android:textColor="@color/color_main" android:gravity="center" android:id="@id/cancel_tv" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>