<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/theme_window_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/include_enter_tool_bar" />
    <EditText android:textSize="15.0sp" android:textColor="#ff545454" android:textColorHint="#ffb2b2b2" android:gravity="center|left|top" android:id="@id/feedback_info" android:background="@drawable/menu_feedback_edit_text_bg" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="19.0dip" android:layout_marginRight="20.0dip" android:hint="@string/menu_feedback_info" android:inputType="textMultiLine" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
        <EditText android:textSize="15.0sp" android:textColor="#ff545454" android:textColorHint="#ffb2b2b2" android:gravity="center_vertical" android:id="@id/feedback_email" android:background="@drawable/menu_feedback_edit_text_bg" android:padding="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/menu_feedback_email" android:lines="1" android:inputType="textNoSuggestions" />
    </LinearLayout>
    <TextView android:enabled="false" android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/feedback_submit" android:background="@drawable/feedback_activity_btn_bg_selector" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:text="@string/menu_feedback_submit" />
</LinearLayout>