<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:id="@id/dialog_abc_locker_fl" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_gravity="center" android:background="@drawable/rate_us_bg" android:layout_width="320.0dip" android:layout_height="280.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/tac_ic_rate_top_bg" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/app_name" />
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:src="@drawable/tac_ic_dialog_logo" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white_90p" android:gravity="center" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/rate_us_five_stars" android:fontFamily="sans-serif-light" />
            <com.airbnb.lottie.LottieAnimationView android:id="@id/toolbar_ad" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="45.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" app:lottie_fileName="5_stars.json" app:lottie_autoPlay="true" app:lottie_loop="true" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </LinearLayout>
        <Button android:textColor="@color/white" android:layout_gravity="bottom|center" android:id="@id/go_to_gp_btn" android:background="@drawable/rate_btn_selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="12.0dip" android:text="@string/rate_us" />
        <ImageView android:layout_gravity="right" android:id="@id/dialog_close_iv" android:background="@drawable/rate_close_btn_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="50.0" />
    </FrameLayout>
</FrameLayout>